--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "homework_1",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tailwindcss -i src/input.css -o src/output.css --minify"
   },
   "keywords": [],
   "author": "",
